--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
             <p>
                 Main Jo Likh Raha Hoon Please Hasna Mat This Is My Feelings.
                 Haa to Apne ko mile waise kaafi time hogaya and kaafi time se
-                me batane wala tha, fer socha nahi wo kya sochegi to maine, 
+                me batane wala tha, fer socha nahi tum kya sochogi to maine, 
                 kuch express nahi kiya, and really tere se baat karne par achha 
-                lagta hai (ab tujhe lagega badha chadhakar bol rha hai) Nahi sach me !
-                Face to Face To Shyd Na Bol Paau Is Liye Code Page Banakar Batana 
+                lagta hai (ab tujhe lagega ki kuch jyada bol raha hoo) par Nahi sach me !
+                Face to Face To Shyd Na Bol Paau Is Liye Ek Code Page Banakar Batana 
                 sahi samjha. <br><br>
                 Mujhe Pata Nahi Tum Kya Sochogi, Par Please hate mat dena baki.. bas...
                 I LIKE YOU Really.... ✨
